--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:uMvAcvAbw+gxB+pQ8BRej7+xy0isiDirr99DZVzuvLo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
