--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,5 +46,6 @@ jobs:
           command: |
             sudo apt update
             sudo apt -qq install git-ftp
+            git commit -am "More details"
             echo "Deploying project ..."
             git ftp push --user "${username}" --passwd "${password}" "${ftp_location}"
